# PowerProfiler_pcm1802

./: README.md
bpas/: MainFrm.dfm  MainFrm.pas  PowerProfiler.ini  adc_bl702_config.dfm  adc_bl702_config.pas
source/Audio_pcm1802/: CMakeLists.txt
source/Audio_pcm1802/SDK/bsp/board/bl702zb/: board.c
source/Audio_pcm1802/SDK/components/: CMakeLists.txt
source/Audio_pcm1802/SDK/drivers/lhal/: CMakeLists.txt
source/Audio_pcm1802/SDK/drivers/lhal/config/bl702/: device_table.c
source/Audio_pcm1802/SDK/drivers/lhal/include/: bflb_clock.h
source/Audio_pcm1802/src/: audio_usb.c  cdc_acm_template.c  main_config.h
source/PowerProfiler_pcm1802/: .project  CMakeLists.txt  Makefile  proj.conf
source/PowerProfiler_pcm1802/SDK/bsp/board/bl702rd/: board.c
source/PowerProfiler_pcm1802/SDK/drivers/lhal/include/: bflb_clock.h
source/PowerProfiler_pcm1802/SDK/drivers/soc/bl702/std/port/: bl702_clock.c
source/PowerProfiler_pcm1802/src/: cmd_cfg.h  cmd_decode.c  i2s_drv.c  i2s_drv.h  main.c  main_config.h  usb_buffer.c
source_com/: .cproject  Makefile  test.txt
source_com/SDK/bsp/board/bl702zb/: board.c
source_com/SDK/drivers/lhal/config/bl702/: device_table.c
source_com/SDK/drivers/lhal/src/: bflb_gpio.c  bflb_i2s.c
source_com/src/: cmd_cfg.h  cmd_decode.c  i2s_drv.c  main_config.h  usb_buffer.c
